# icpc

./: .gitignore  CMakeLists.txt  gen  gen-val.bash  gen.cpp  in  main  main.c  main.cpp  out  val  val.cpp  z.out  z.py
bits/: stdc++.h
problem/: p  problem.cpp  sc.bash
rj/: 1  10  11  12  13  14  15  17  18  2  3  4  5  6  7  8  9  rj1.cpp  rj10.cpp  rj11.cpp  rj12.cpp  rj13.cpp  rj2.cpp  rj3.cpp  rj4.cpp  rj5.cpp  rj6.cpp  rj7.cpp  rj8.cpp  rj9.cpp
templates/: Mint.h  clion-template.cpp  contest.txt  cpeditor-template.cpp  debug-flags  debug.h  debugc.h  fastio1.cpp  fastio2.cpp  goemetry.xopp  my-geo-notes.txt  my-math-notes.txt  template.cpp  to-print.md
templates/Templates-main/: 2DBIT.cpp  BIT.cpp  BIT_range.cpp  DynamicConnectivity.cpp  FloorValues.cpp  Trie.cpp  WaveletTree.cpp  __int128_t.cpp  combinatorics.cpp  dsu.cpp  dynamic-subarray-sum.cpp  edge.cpp  egcd.cpp  floyd-tricks.cpp  lazy-segment-tree.cpp  max_flow.cpp  max_matching.cpp  mex_calculator.cpp  min-cut-StoerWagner.cpp  ordered_set.cpp  rolling_hash.cpp  scc.cpp  segment-tree-2d.cpp  segment-tree-iterative.cpp  segment_tree.cpp  sparse-table-2d.cpp  sparse-table.cpp  zalgo.cpp
templates/Templates-main/Data Structures/: 2DBIT.cpp
templates/Templates-main/Math/: Notes.txt
templates/fady-templates/: dataStructure.cpp  dpTricks.cpp  geometry.cpp  graphs.cpp  math.cpp  quadraticSieve.c  segmentTrees.cpp  strings.cpp  trees.cpp
test-dynamic-array/: bench_bucket  bench_bucket.cpp  bench_bucket_pmr  bench_bucket_pmr.cpp  bench_treap  bench_treap.cpp  results.txt  run_all.sh
(+3 files in other folders)
